add endpoint to list installed libraries
